# spotify

./: README.md
.github/workflows/: run_banco.yml  run_musicas_recentes.yml
src/: pyproject.toml
src/assets/: .gitignore  TracksId.xlsx  banco.py  banco_actions.py  genero.py  generos.csv  gettoken.py  instrucoes.md  musicas_ouvidas.csv  musicas_recentes.py  musicas_recentes_actions.py  played_tracks.csv  primeira_solicitação.py  spotify.py  spotify_token.txt  teste.py  tokenspecial.py  tracksidatt.py
src/assets/backup/: generos.csv  gettoken.py  spotify50.py
src/assets/bi/: .gitignore  Spotify.pbix
src/assets/images/: diagrama.svg.crswap
